// Copyright 2018 Red Hat, Inc.
// Copyright (c) 2018 Cisco and/or its affiliates.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at:
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

// This contains the core Network Service Mesh API definitions for external
// consumption via gRPC protobufs.

syntax = "proto3";

package local.connection;
option go_package = "connection";
import "github.com/golang/protobuf@v1.3.1/ptypes/empty/empty.proto";

import "github.com/networkservicemesh/networkservicemesh/controlplane/pkg/apis/connectioncontext/connectioncontext.proto";

message Mechanism {
    MechanismType type = 1;
    map<string, string> parameters = 2;
}

enum MechanismType {
    DEFAULT_INTERFACE = 0;
    KERNEL_INTERFACE = 1;
    VHOST_INTERFACE = 2;
    MEM_INTERFACE = 3;
    SRIOV_INTERFACE = 4;
    HW_INTERFACE = 5;
}

enum State {
    UP = 0;
    DOWN = 1;
}

message Connection {
    string id = 1;
    string network_service = 2;
    Mechanism mechanism = 3;
    connectioncontext.ConnectionContext context = 4;
    map<string, string> labels = 5;
    State state = 6;
}

enum ConnectionEventType {
    INITIAL_STATE_TRANSFER = 0;
    UPDATE = 1;
    DELETE = 2;
}

message ConnectionEvent {
    ConnectionEventType type = 1;
    map<string, Connection> connections = 2;
}

service MonitorConnection {
    rpc MonitorConnections (google.protobuf.Empty) returns (stream ConnectionEvent);
}